a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Fan_Jin/badexptype.min
# This program is invalid as the expression do not support string + int

print "string" + 3;

